# Online-Auctions-Backend

./: .env.dist  README.md  alembic.ini  dependencies.py  pyproject.toml
app/: celery.py  config.py  conftest.py  db.py  mailing.py  main.py  utils.py
app/base/: repositories.py  services.py
app/bids/: constants.py  models.py  schemas.py
app/lots/: constants.py  dependencies.py  filters.py  models.py  repositories.py  routes.py  schemas.py  services.py  tasks.py
app/lots/tests/: test_routes.py
app/users/: auth.py  constants.py  dependencies.py  managers.py  models.py  routes.py  schemas.py
app/users/tests/: test_routes.py
docker/local/: Dockerfile  celery_beat_entrypoint.sh  celery_entrypoint.sh  docker-compose.yaml  web_entrypoint.sh
migrations/: env.py
